[package]
name = "specter_nif"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "specter_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
once_cell = "1.2.0"
rustler = "0.24"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = "0.8"
webrtc = "0.4"
