[package]
name = "specter_nif"
version = "0.1.0"
authors = []
edition = "2018"
rust-version = "1.65"

[lib]
name = "specter_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
env_logger = "0.11"
once_cell = "1.2.0"
rustler = "0.31"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.2", features = ["v4"] }
webrtc = { version = "0.9" }
